public class GameConstants {
    
    public static readonly string WALK_PERSON_NAME_ANIM = "walk";
    public static readonly string RELAX_PERSON_NAME_ANIM = "relax";
    public static readonly string SEARCH_PERSON_NAME_ANIM = "search";
    public static readonly string DANCE_PERSON_NAME_ANIM = "dance";
    
    public static readonly string TAG_DANCE_FOR_VOLUME = "dance";
    public static readonly string TAG_BAR_FOR_VOLUME = "bar";
    public static readonly string TAG_RELAX_FOR_VOLUME = "relax";

    public static readonly int NO_DANCE_FOR_ANIM_PERSON = 0;

    public static readonly int BAR_ZONE_NUMBER_VALUE = 1;
    public static readonly int DANCE_ZONE_NUMBER_VALUE = 2;
    public static readonly int RELAX_RUM_ZONE_NUMBER_VALUE = 3;
    
    //--------- POLICE ------------
    public static readonly string WALK_POLICE_NAME_ANIM = "walk";
    public static readonly string SEARCH_POLICE_NAME_ANIM = "search";
}
